fix main text contrast

--- a/css/base.css
+++ b/css/base.css
@@ -56,7 +56,7 @@ body {
 	font-size: 13px;
 	line-height:26px;
 	letter-spacing:1px;
-	color:#999999;
+	color:#666;
 	overflow-x:hidden;
 	-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
